unpackaged/main/default/objects/BU_Pricing_Schedule__c/BU_Pricing_Schedule__c.object-meta.xml
<CustomObject>
    <label>BU Pricing Schedule</label>
    <nameField>
        <label>Pricing Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BU Pricing Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>