unpackaged/main/default/objects/BU_Pricing_Schedule__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>BU Pricing Schedules</relationshipLabel>
    <relationshipName>BU_Pricing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>