unpackaged/main/default/objects/BU_Pricing_Schedule__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <formula>TEXT(Unit_Type__c)&amp;&quot;-&quot;&amp;LPAD(TEXT(Lower_Bound__c),8,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort</label>
    <type>Text</type>
</CustomField>