unpackaged/main/default/objects/BU_Pricing_Schedule__c/fields/Total_Units_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Sold__c</fullName>
    <formula>CASE(Unit_Type__c,
 &quot;users&quot;,Business_Unit__r.Total_Seats__c,
 &quot;apps&quot;,NULL,
 &quot;users-view-only&quot;,NULL,
 &quot;service-hours&quot;,NULL,
 &quot;mobile-mau&quot;,Business_Unit__r.Total_Users_Mobile_only__c,
 &quot;external-users&quot;,Business_Unit__r.Total_External_Users__c,
 &quot;external-apps&quot;,Business_Unit__r.Total_External_Apps__c,
 &quot;orgs&quot;,NULL,
 &quot;unlimited&quot;,NULL,
 &quot;custom&quot;,NULL,
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Units: Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>